--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	</head>
 	<body class="bg-secondary-subtle font-inter">
 		<div id="root" class="vh-100"></div>
+		<script
+			src="https://kit.fontawesome.com/21bfa52504.js"
+			crossorigin="anonymous"
+		></script>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
