--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" href="src/assets/logo.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nova+Round&display=swap"
-			rel="stylesheet"
-		/>
+			rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Accounter Frontend</title>
 	</head>
@@ -16,8 +15,7 @@
 		<div id="root" class="vh-100"></div>
 		<script
 			src="https://kit.fontawesome.com/21bfa52504.js"
-			crossorigin="anonymous"
-		></script>
+			crossorigin="anonymous"></script>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
